--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,10 +19,10 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 6.0.x
+        dotnet-version: 6.x
     - name: Restore dependencies
-      run: dotnet restore TestSolution/
+      run: dotnet restore Solution/
     - name: Build
-      run: dotnet build TestSolution/ --no-restore
+      run: dotnet build Solution/ --no-restore
     - name: Test
-      run: dotnet test TestSolution/ --no-build --verbosity normal
+      run: dotnet test Solution/ --no-build --verbosity normal
