--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,18 +11,30 @@ on:
 
 jobs:
   build:
+    strategy:
+      matrix:
+        configuration: [ "Release" ]
+        platform: [ "x86", "x64" ]
 
     runs-on: windows-latest
+    
+    env:
+      SolutionName: "Solution/TestSolution.sln"
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
+      
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.x
+        
     - name: Restore dependencies
-      run: dotnet restore Solution/
+      run: dotnet restore $env:SolutionName
+      
     - name: Build
-      run: dotnet build Solution/ --no-restore
+      run: dotnet build $env:SolutionName --nologo --no-restore
+      
     - name: Test
-      run: dotnet test Solution/ --no-build --verbosity normal
+      run: dotnet test $env:SolutionName --nologo --no-build --verbosity normal
