--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,6 +22,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
       
+    - name: Versioning
+      run: |
+        $version = "0.0.0.{0:#}" -f $($Env:GITHUB_RUN_NUMBER)
+        echo "BUILD_VERSION = $version" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+      
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
