--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,37 +13,27 @@ env:
   SolutionName: "Solution/TestSolution.sln"
       
 jobs:
-  build:
-    name: Build .NET
+  work:
+    name: .NET
     runs-on: windows-latest
 
     steps:
     - name: Checkout
       uses: actions/checkout@v3
             
-    - name: Setup .NET
+    - name: Setup
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.x
         
-    - name: Restore dependencies
+    - name: Restore
       run: dotnet restore $env:SolutionName
       
-    - name: Build Solution
+    - name: Build
       run: dotnet build $env:SolutionName -c Release --nologo --no-restore
-      
-  test:
-    name: Test .NET
-    runs-on: windows-latest
     
-    steps:
-    - name: Test Solution
+    - name: Test
       run: dotnet test $env:SolutionName -c Release --nologo --no-build --verbosity normal
       
-  deploy:
-    name: Deploy .NET
-    runs-on: windows-latest
-    
-    steps:
-    - name: Production
+    - name: Deploy
       run: echo 'Prouduction deployment...'
