--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: Build .NET
 
 on:
   push:
@@ -13,8 +13,8 @@ env:
   SolutionName: "Solution/TestSolution.sln"
       
 jobs:
-  work:
-    name: .NET
+  build:
+    name: Build .NET
     runs-on: windows-latest
 
     steps:
@@ -34,6 +34,7 @@ jobs:
     
     - name: Test
       run: dotnet test $env:SolutionName -c Release --nologo --no-build --verbosity normal
-      
-    - name: Deploy
-      run: echo 'Prouduction deployment...'
+
+  call-deploy-workflow:
+    uses: ./.github/workflows/deploy.yml
+    secrets: inherit
