--- a/.github/workflows/test.NET.yml
+++ b/.github/workflows/test.NET.yml
@@ -10,6 +10,14 @@ jobs:
     name: Test .NET
     runs-on: windows-latest
 
-    steps:    
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+            
+    - name: Setup
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 6.x
+
     - name: Test
       run: dotnet test $env:SolutionName -c Release --nologo --no-build --verbosity normal
