--- a/.github/workflows/build.NET.yml
+++ b/.github/workflows/build.NET.yml
@@ -14,6 +14,9 @@ jobs:
     name: Build .NET
     runs-on: windows-latest
 
+    outputs:
+      compile:
+
     steps:
     - name: Checkout
       uses: actions/checkout@v3
