--- a/.github/workflows/overall.yml
+++ b/.github/workflows/overall.yml
@@ -20,6 +20,7 @@ jobs:
       solutionFile: "Solution/TestSolution.sln"
 
   call-test-workflow:
+    name: Test
     needs: call-build-workflow
     uses: ./.github/workflows/test.NET.yml
     secrets: inherit
@@ -27,6 +28,7 @@ jobs:
       solutionFile: "Solution/TestSolution.sln"
 
   call-deploy-workflow:
+    name: Deploy
     needs: call-test-workflow
     uses: ./.github/workflows/deploy.NET.yml
     secrets: inherit
