--- a/.github/workflows/build.NET.yml
+++ b/.github/workflows/build.NET.yml
@@ -14,9 +14,6 @@ jobs:
     name: Build .NET
     runs-on: windows-latest
 
-    outputs:
-      compile:
-
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -30,4 +27,13 @@ jobs:
       run: dotnet restore ${{ inputs.solutionFile }}
       
     - name: Build
-      run: dotnet build ${{ inputs.solutionFile }} -c Release --nologo --no-restore
+      run: dotnet build ${{ inputs.solutionFile }} -c Release --nologo --no-restore -o './buildArtifacts'
+      
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.2
+      with:
+        name: 'buildArtifacts'
+        # A file, directory or wildcard pattern that describes what to upload
+        path: './buildArtifacts'
+        if-no-files-found: error
+        retention-days: 7
