--- a/.github/workflows/build.NET.yml
+++ b/.github/workflows/build.NET.yml
@@ -27,13 +27,12 @@ jobs:
       run: dotnet restore ${{ inputs.solutionFile }}
       
     - name: Build
-      run: dotnet build ${{ inputs.solutionFile }} -c Release --nologo --no-restore -o './buildArtifacts'
+      run: dotnet build ${{ inputs.solutionFile }} -c Release --nologo --no-restore
       
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
-        name: 'buildArtifacts'
-        # A file, directory or wildcard pattern that describes what to upload
-        path: './buildArtifacts'
+        name: 'BuildArtifacts'
+        path: './BuildArtifacts'
         if-no-files-found: error
         retention-days: 7
