--- a/.github/workflows/test.NET.yml
+++ b/.github/workflows/test.NET.yml
@@ -14,10 +14,7 @@ jobs:
     name: Test .NET
     runs-on: windows-latest
 
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-            
+    steps:            
     - name: Setup
       uses: actions/setup-dotnet@v3
       with:
@@ -25,8 +22,8 @@ jobs:
         
     - name: Download artifacts
       uses: actions/download-artifact@v3
-      #with:
-        #name: BuildArtifacts
+      with:
+        name: Build
 
     - name: Test
-      run: dotnet test ${{ inputs.solutionFile }} -c Release --nologo --no-build --verbosity normal
+      run: dotnet test ${{ inputs.solutionFile }} -c Release --nologo --no-build --verbosity normal --results-directory Results
