--- a/.github/workflows/test.NET.yml
+++ b/.github/workflows/test.NET.yml
@@ -14,16 +14,17 @@ jobs:
     name: Test .NET
     runs-on: windows-latest
 
-    steps:            
-    - name: Setup
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      
+    - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.x
         
     - name: Download artifacts
       uses: actions/download-artifact@v3
-      with:
-        name: Build
 
     - name: Test
       run: dotnet test ${{ inputs.solutionFile }} -c Release --nologo --no-build --verbosity normal --results-directory Results
