--- a/.github/workflows/overall.yml
+++ b/.github/workflows/overall.yml
@@ -4,31 +4,31 @@ name: Overall .NET
 
 on:
   push:
-    branches: [ "develop", "1-update-actions" ]
+    branches: [ "develop" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "develop" ]
 
 env:
   SolutionFile: "Solution/TestSolution.sln"
       
 jobs:
-  call-build-workflow:
-    name: Build
-    uses: ./.github/workflows/build.NET.yml
+  call-test-workflow:
+    name: Test
+    uses: ./.github/workflows/test.NET.yml
     secrets: inherit
     with:
       solutionFile: "Solution/TestSolution.sln"
-
-  call-test-workflow:
-    name: Test
-    needs: call-build-workflow
-    uses: ./.github/workflows/test.NET.yml
+      
+  call-build-workflow:
+    name: Build
+    needs: call-test-workflow
+    uses: ./.github/workflows/build.NET.yml
     secrets: inherit
     with:
       solutionFile: "Solution/TestSolution.sln"
 
   call-deploy-workflow:
     name: Deploy
-    needs: call-test-workflow
+    needs: call-build-workflow
     uses: ./.github/workflows/deploy.NET.yml
     secrets: inherit
