--- a/.github/workflows/deploy.NET.yml
+++ b/.github/workflows/deploy.NET.yml
@@ -13,3 +13,8 @@ jobs:
     steps:      
     - name: Deploy
       run: echo 'Prouduction deployment...'
+
+    - name: Download Build
+      uses: actions/download-artifact@v2.1.1
+      
+    - run: dir
