--- a/.github/workflows/overall.yml
+++ b/.github/workflows/overall.yml
@@ -1,6 +1,5 @@
 # This workflow will build a .NET solution
-
-name: Overall .NET
+name: Build
 
 on:
   push:
@@ -18,6 +17,6 @@ jobs:
         configuration: [ "Release" ]
     secrets: inherit
     with:
-      solutionFile: "Solution/TestSolution.sln"
       dotnetVersion: ${{ matrix.dotnet }}
       configuration: ${{ matrix.configuration }}
+      solutionFile: "Solution/TestSolution.sln"
