--- a/.github/workflows/mainTest.yml
+++ b/.github/workflows/mainTest.yml
@@ -10,7 +10,7 @@ on:
 jobs:      
   call-test-workflow:
     name: Test
-    uses: ./.github/workflows/test.net.yml
+    uses: ./.github/workflows/test.yml
     strategy:
       matrix:
         dotnet: [ "6.0", "7.0" ]
