--- a/.github/workflows/mainTest.yml
+++ b/.github/workflows/mainTest.yml
@@ -4,8 +4,10 @@ name: MainTest
 on:
   push:
     branches: [ "develop" ]
-  pull_request:
+  pull_request_target:
     branches: [ "master", "develop" ]
+  schedule:
+    - cron: '30 * * * *' 
       
 jobs:      
   call-test-workflow:
