--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
       Configuration: Release
       SolutionPath: Solution\TestSolution.sln
       TestProjectPath: Solution\Domain.Test\Domain.Test.csproj
+      WapProjectDirectory: Solution\PackagedTestApp\PackagedTestApp (Package)
       WapProjectPath: Solution\PackagedTestApp\PackagedTestApp (Package)\PackagedTestApp (Package).wapproj
     
     steps:
@@ -50,3 +51,16 @@ jobs:
       run: msbuild $env:SolutionPath /t:Restore /p:Configuration=$env:Configuration /p:RuntimeIdentifier=$env:RuntimeIdentifier
       env:
         RuntimeIdentifier: win10-${{ matrix.targetplatform }}
+
+    - name: Build package
+      run: msbuild $env:SolutionPath /p:Platform=$env:TargetPlatform /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:BuildMode /p:AppxBundle=$env:AppxBundle /p:PackageCertificateKeyFile=$env:SigningCertificate /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
+      env:
+        AppxBundle: Never
+        BuildMode: SideloadOnly
+        TargetPlatform: ${{ matrix.targetplatform }}
+        
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v3.1.2
+      with:
+        name: MSIX Package
+        path: ${{ env.WapProjectDirectory }}\${{ env.AppPackagesDirectory }}
