--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
       ApplicationProjectPath: Solution\PackagedTestApp\PackagedTestApp\PackagedTestApp.csproj
       AppPackagesDirectory: AppPackages
       Configuration: Release
+      SigningCertificate: GitHubActionsDemo.pfx
       SolutionPath: Solution\TestSolution.sln
       TestProjectPath: Solution\Domain.Test\Domain.Test.csproj
       WapProjectDirectory: Solution\PackagedTestApp\PackagedTestApp (Package)
@@ -47,11 +48,18 @@ jobs:
     - name: Test Domain
       run: dotnet test $env:TestProjectPath -c $env:Configuration
     
-    - name: Restore application
+    - name: Restore Application
       run: msbuild $env:SolutionPath /t:Restore /p:Configuration=$env:Configuration /p:RuntimeIdentifier=$env:RuntimeIdentifier
       env:
         RuntimeIdentifier: win10-${{ matrix.targetplatform }}
 
+    - name: Decode PFX
+      run: |
+        $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.Base64_Encoded_Pfx }}")
+        $currentDirectory = Get-Location
+        $certificatePath = Join-Path -Path $currentDirectory -ChildPath $env:WapProjectDirectory -AdditionalChildPath $env:SigningCertificate
+        [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
+    
     - name: Build package
       run: msbuild $env:SolutionPath /p:Platform=$env:TargetPlatform /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:BuildMode /p:AppxBundle=$env:AppxBundle /p:PackageCertificateKeyFile=$env:SigningCertificate /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
       env:
@@ -59,6 +67,9 @@ jobs:
         BuildMode: SideloadOnly
         TargetPlatform: ${{ matrix.targetplatform }}
         
+    - name: Remove PFX
+      run: Remove-Item -path $env:WapProjectDirectory/$env:SigningCertificate
+      
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3.1.2
       with:
