--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       ApplicationProjectPath: Solution\PackagedTestApp\PackagedTestApp\PackagedTestApp.csproj
       AppPackagesDirectory: AppPackages
       Configuration: Release
-      SigningCertificate: GitHubActionsDemo.pfx
+      SigningCertificate: GitHubActionsWorkflow.pfx
       SolutionPath: Solution\TestSolution.sln
       TestProjectPath: Solution\Domain.Test\Domain.Test.csproj
       WapProjectDirectory: Solution\PackagedTestApp\PackagedTestApp (Package)
@@ -64,12 +64,11 @@ jobs:
     - name: Decode PFX
       run: |
         $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.Base64_Encoded_Pfx }}")
-        $currentDirectory = Get-Location
-        $certificatePath = Join-Path -Path $currentDirectory -ChildPath $env:WapProjectDirectory -AdditionalChildPath $env:SigningCertificate
+        $certificatePath = Join-Path -Path $env:WapProjectDirectory -ChildPath $env:SigningCertificate
         [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
     
     - name: Build package
-      run: msbuild $env:SolutionPath /p:Platform=$env:TargetPlatform /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:BuildMode /p:AppxBundle=$env:AppxBundle /p:PackageCertificateKeyFile=$env:SigningCertificate /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
+      run: msbuild $env:WapProjectPath /p:Configuration=$env:Configuration /p:Platform=$env:TargetPlatform /p:UapAppxPackageBuildMode=$env:BuildMode /p:AppxBundle=$env:AppxBundle /p:PackageCertificateKeyFile=$env:SigningCertificate /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
       env:
         AppxBundle: Never
         BuildMode: SideloadOnly
