--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,16 +65,16 @@ jobs:
       run: |
         $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.Base64_Encoded_Pfx }}")
         $certificatePath = $env:SigningCertificate
-        echo 'Copied to $certificatePath'
+        echo $certificatePath
         [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
         $certificatePath = Join-Path -Path Solution -ChildPath $env:SigningCertificate
-        echo 'Copied to $certificatePath'
+        echo $certificatePath
         [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
         $certificatePath = Join-Path -Path Solution\PackagedTestApp -ChildPath $env:SigningCertificate
-        echo 'Copied to $certificatePath'
+        echo $certificatePath
         [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
         $certificatePath = Join-Path -Path $env:WapProjectDirectory -ChildPath $env:SigningCertificate
-        echo 'Copied to $certificatePath'
+        echo $certificatePath
         [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
     
     - name: Build package
