--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,11 @@ jobs:
         echo $certificatePath
         [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
     
+    - name: Decode PFX (Bash)
+      run: |
+        echo $CERTIFICATE_BASE64 | base64 --decode > $env:SigningCertificate
+      shell: bash
+    
     - name: Build package
       #run: msbuild $env:WapProjectPath /p:Configuration=$env:Configuration /p:Platform=$env:TargetPlatform /p:UapAppxPackageBuildMode=$env:BuildMode /p:AppxBundle=$env:AppxBundle /p:PackageCertificateKeyFile=$env:SigningCertificate /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
       run: msbuild $env:SolutionPath /p:Configuration=$env:Configuration /p:Platform=$env:TargetPlatform /p:PackageCertificateKeyFile=$env:SigningCertificate /p:PackageCertificatePassword=${{ secrets.Pfx_Key }} -verbosity:minimal
